# Hessian

./: .gitignore  README.md  pyproject.toml
scripts/: evaluate.py  run_experiment.py  train.py
src/hessian_influence/: __init__.py
src/hessian_influence/core/: __init__.py  hessian.py  inversion.py
src/hessian_influence/data/: __init__.py  datasets.py  loaders.py
src/hessian_influence/evaluation/: __init__.py  metrics.py
src/hessian_influence/experiments/: __init__.py  base.py  pipelines.py  runners.py
src/hessian_influence/influence/: __init__.py  calculator.py  lds.py
src/hessian_influence/training/: __init__.py  models.py  trainer.py
src/hessian_influence/utils/: __init__.py  logging.py  seed.py
src/hessian_influence/visualization/: __init__.py  plots.py
tests/: test_influence.py  test_inversion.py  test_metrics.py
